Bug 1666422 - Add missing include for cstdint. r=sylvestre

Differential Revision: https://phabricator.services.mozilla.com/D90963